--- a/halo/template/index.pug
+++ b/halo/template/index.pug
@@ -14,7 +14,7 @@ block content
   section.intro.intro--camera
     .container-xl.px-sm-5.px-xl-0
       .row
-        .intro__text.d-flex.flex-column.col-md
+        .intro__text.d-flex.flex-column.justify-content-center.col-md
           h1 Máy ảnh DSLR/Mirrorless
 
           h3.font-italic 
@@ -30,7 +30,7 @@ block content
   section.intro.intro--lens.dark-side
     .container-xl.px-sm-5.px-xl-0
       .row
-        .intro__text.d-flex.flex-column.col-md
+        .intro__text.d-flex.flex-column.justify-content-center.col-md
           h1 Ống kính máy ảnh
           
           h3.font-italic Góc nhìn mới, cảm nhận mới, thế giới mới
@@ -41,7 +41,7 @@ block content
           img(src="img/lens-img/lens-intro-imgv2.png", alt="")
 
   section.intro.intro--equip
-    .container-xl.px-sm-5.px-xl-0
+    .container-xl.px-sm-5.px-xl-0.mw-900
       .intro__text.d-flex.flex-column
         h1 Phụ kiện máy ảnh
         h3.font-italic Dù “pro” đến mấy cũng cần các trợ thủ đắc lực
@@ -59,7 +59,7 @@ block content
         .card
           img.card-img(src="img/equip-img/equip-4.png", alt="")
 
-      button.btn.btn--dark.seemore-btn(type='button') Xem chi tiết
+      button.btn.btn--dark.seemore-btn.mx-auto(type='button') Xem chi tiết
 
   section.specials.dark-side
     .container-xl.px-sm-5.px-xl-0.d-flex.flex-column.align-items-center
@@ -70,7 +70,7 @@ block content
         img.brands-item.col-6.col-md-3(src="img/misc-img/brands-canon.png", alt="")
         img.brands-item.col-6.col-md-3(src="img/misc-img/brands-sigma.png", alt="")
       .brands__text
-        h3.font-italic.text-center Là đối tác chiến lược của Sony, Canon, Nikon và Sigma, HALO sẽ miễn phí nâng thời hạn bảo hành sản phẩm chính hãng của các thương hiệu này: 
+        h3.font-italic.text-center.mw-900 Là đối tác chiến lược của Sony, Canon, Nikon và Sigma, HALO sẽ miễn phí nâng thời hạn bảo hành sản phẩm chính hãng của các thương hiệu này: 
           span.font-weight-bold từ 12 tháng lên 24 tháng
 
       h1 Chính sách độc quyền
@@ -84,7 +84,7 @@ block content
 
           .policy__icon.d-flex.justify-content-center.align-items-center
             i.fas.fa-truck
-            p FREE
+            p.font-weight-bold FREE
 
         .policy__item.border.border-white.d-flex.flex-column.justify-content-between
           p.policy__text.text-center Đổi mới sản phẩm hoặc
@@ -93,7 +93,7 @@ block content
 
           .policy__icon.d-flex.justify-content-center.align-items-center
             i.fas.fa-history
-            p 100%
+            p.font-weight-bold 100%
 
         .policy__item.border.border-white.d-flex.flex-column.justify-content-between
           p.policy__text.text-center Hỗ trợ trả góp mọi sản phẩm với 
@@ -103,7 +103,7 @@ block content
 
           .policy__icon.d-flex.justify-content-center.align-items-center
             i.far.fa-credit-card
-            p 0%  
+            p.font-weight-bold 0%  
         
   section.promo
     .container-xl.px-sm-5.px-xl-0
@@ -117,43 +117,46 @@ block content
       button.btn.btn--dark.seemore-btn.mx-auto(type='button') Xem thêm
 
   section.review.dark-side
-    .container-xl.px-sm-5.px-xl-0
+    .container-xl.px-sm-5.px-xl-0.mw-900
       h1 HALO review
 
-      a.review-item.d-flex(href="#")
+      a.review-item.d-flex(href="")
         img.review-item__img(src="img/misc-img/review-img-v2.png", alt="")
         
-        .review-item__content.d-flex.flex-wrap.align-items-start.align-content-start
-          h2 Top 5 DSLR đáng mua năm 2021
-          p.subtext.font-italic.font-weight-light Trung Đức
-          p.subtext.font-italic.font-weight-light
-            i.far.fa-clock.mx-1 
-            | 01/01/2021
-          p.review-headlines.hidden-till-sm Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. 
+        .review-item__content.w-100.d-flex.flex-column.justify-content-between
+          .review-header.d-flex.flex-wrap.align-items-start.align-content-start
+            h2.w-100 Top 5 DSLR đáng mua năm 2021
+            p.subtext.font-italic.font-weight-light Trung Đức
+            p.subtext.font-italic.font-weight-light
+              i.far.fa-clock.mx-1.mx-sm-2 
+              | 01/01/2021
+          p.review-preview.hidden-till-sm Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.
       
       a.review-item.d-flex(href="#")
         img.review-item__img(src="img/misc-img/review-img-v2.png", alt="")
         
-        .review-item__content.d-flex.flex-wrap.align-items-start.align-content-start
-          h2 Top 5 DSLR đáng mua năm 2021
-          p.subtext.font-italic.font-weight-light Trung Đức
-          p.subtext.font-italic.font-weight-light 
-            i.far.fa-clock.mx-1 
-            | 01/01/2021
-          p.review-headlines.hidden-till-sm Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. 
+        .review-item__content.w-100.d-flex.flex-column.justify-content-between
+          .review-header.d-flex.flex-wrap.align-items-start.align-content-start
+            h2.w-100 Top 5 DSLR đáng mua năm 2021
+            p.subtext.font-italic.font-weight-light Trung Đức
+            p.subtext.font-italic.font-weight-light 
+              i.far.fa-clock.mx-1.mx-sm-2 
+              | 01/01/2021
+          p.review-preview.hidden-till-sm Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. 
 
-      button.btn.btn--light.seemore-btn(type='button') Xem thêm        
+      button.btn.btn--light.seemore-btn.mx-auto(type='button') Xem thêm        
 
   section.connection
     .container-xl.px-sm-5.px-xl-0
-      h1.connection__header Đăng ký email để nhận tin tức mới nhất từ HALO
-      input.connection__input(type="text" placeholder="Email của bạn...")
-      button.btn.connection__submit-btn Gửi
-      p.connection__text Hoặc theo dõi chúng tôi tại
-      .connection__socials
-        a.socials__item(href="#")
+      h1.connection__header Đăng ký để nhận tin mới nhất từ HALO
+      form.connection__form.d-flex.justify-content-center(action="")
+        input.connection__input(type="text" placeholder="Email của bạn...")
+        button.btn.connection__submit-btn.btn-primary.font-italic Gửi
+      p.connection__text.text-center Hoặc theo dõi chúng tôi tại
+      .connection__socials.d-flex.justify-content-between.mx-auto
+        a.socials__item.d-block(href="#")
           img(src="img/misc-img/social-fb.png", alt="")
-        a.socials__item(href="#")
+        a.socials__item.d-block(href="#")
           img(src="img/misc-img/social-insta.png", alt="")
-        a.socials__item(href="#")
+        a.socials__item.d-block(href="#")
           img(src="img/misc-img/social-twitter.png", alt="")
