--- a/halo/template/parts/layout.pug
+++ b/halo/template/parts/layout.pug
@@ -23,10 +23,12 @@ html(lang="en")
 
       
   body
-    
     include header.pug
-
+  
     main
+
+      include logreg.pug
+      
       block content
 
     include footer.pug
