--- a/halo/template/parts/main-carousel.pug
+++ b/halo/template/parts/main-carousel.pug
@@ -98,7 +98,7 @@
             .carousel-caption__img
             .carousel-caption__img
 
-          p.carousel-header MỘT NGÀM CHO TẤT CẢ
+          p.carousel-header.font-italic.font-weight-normal "Một ngàm cho tất cả"
           p.carousel-header Kết nối mọi thứ với ngàm E-mount của 
             span.logo-sony-inline SONY
 
