--- a/halo/template/parts/footer.pug
+++ b/halo/template/parts/footer.pug
@@ -1,2 +1,28 @@
+footer.dark-side 
+  .container.px-sm-5.mw-600.d-flex.flex-column.justify-content-center.align-items-center
+    img.footer__logo(src="img/misc-img/logo-white.png", alt="")  
 
-  
+    ul.footer__menu.d-flex.justify-content-between.align-items-center
+      li.footer__item.d-flex.justify-content-center.align-items-center
+        a.footer__link.text-center(href="#") Giới thiệu
+
+      li.footer__item.d-flex.justify-content-center.align-items-center
+        a.footer__link.text-center(href="#") Hỗ trợ
+
+      li.footer__item.d-flex.justify-content-center.align-items-center
+        a.footer__link.text-center(href="#") Chính sách
+
+      li.footer__item.d-flex.justify-content-center.align-items-center
+        a.footer__link.text-center(href="#") Liên hệ
+    
+    p.footer__info
+      | Địa chỉ: Số Math.pow(n+1, 2), phố “ABC”, Hà Nội 
+      br
+      | Tổng đài tư vấn mua hàng: 099.999.9999
+      br 
+      | Email: info@halo.vn
+      br 
+      | ĐKKD số 0123456789 do Sở Kế hoạch và Đầu tư TP. Hà Nội cấp ngày 01/01/2021
+
+    p.copyright.font-italic Bản quyền thuộc Công ty TNHH HALO Việt Nam
+
