--- a/reset.css
+++ b/reset.css
@@ -1,9 +1,20 @@
 /* ---------- reset css ----------*/
 
+
+/* --------------- reset css --------------- */
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+*:focus {
+  outline-color: transparent !important;
+}
+
+p {
+  margin-bottom: 0px;
 }
 
 a {
@@ -11,8 +22,17 @@ a {
   color: black;
 }
 
+a:hover {
+  color: initial;
+  text-decoration: none;
+}
+
 ul {
   list-style: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin-bottom: 0px;
 }
 
 table {
@@ -39,7 +59,16 @@ img {
   vertical-align: middle;
   height: auto;
   max-width: 100%;
+  max-height: 100%;
 }
 
+.navbar-brand, 
+.navbar {
+  padding: 0;
+  margin: 0;
+  font-size: 1rem;
+  white-space: normal;
+  max-height: 100%;
+}
 
 /* ---------- kết thúc reset css ----------*/
