--- a/halo/template/camera-hub.pug
+++ b/halo/template/camera-hub.pug
@@ -1,7 +1,12 @@
-<!DOCTYPE html>
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Document222222tt2222333
-  body
+extends parts/layout.pug
+
+block css
+  link(rel="stylesheet", href="css/camera-hub.css")
+
+block title
+  title Camera
+
+block content 
+
+  section.portal
+    
