--- a/halo/template/index.pug
+++ b/halo/template/index.pug
@@ -21,7 +21,7 @@ block content
             br
             | và cả smartphone đắt tiền của bạn
 
-          button.btn.btn--dark.seemore-btn(type='button') Xem chi tiết
+          a.btn.btn--dark.seemore-btn(href="camera-hub.html") Xem chi tiết
 
         .intro__img.col-md
           img(src="img/body-img/camera-intro-imgv2.png", alt="")
@@ -34,7 +34,7 @@ block content
           
           h3.font-italic Góc nhìn mới, cảm nhận mới, thế giới mới
 
-          button.btn.btn--light.seemore-btn(type='button') Xem chi tiết
+          a.btn.btn--light.seemore-btn(href="camera-hub.html") Xem chi tiết
 
         .intro__img.col-md
           img(src="img/lens-img/lens-intro-imgv2.png", alt="")
@@ -58,7 +58,7 @@ block content
         .card
           img.card-img(src="img/equip-img/equip-4.png", alt="")
 
-      button.btn.btn--dark.seemore-btn.mx-auto(type='button') Xem chi tiết
+      a.btn.btn--dark.seemore-btn.mx-auto(href="camera-hub.html") Xem chi tiết
 
   section.specials.dark-side
     .container-xl.px-sm-5.px-xl-0.d-flex.flex-column.align-items-center
