--- a/halo/template/parts/layout.pug
+++ b/halo/template/parts/layout.pug
@@ -39,6 +39,8 @@ html(lang="en")
 
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js' integrity='sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns' crossorigin='anonymous')
 
+    block script
+    
     script(src='js/script.js')
 
 
