--- a/halo/css/layout.css
+++ b/halo/css/layout.css
@@ -631,6 +631,11 @@ footer {
     display: block !important;
   }
 
+  .container-xl {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
   .navbar-collapse {
     padding: 0px 30px !important;
   }
